--- a/css/index.css
+++ b/css/index.css
@@ -5,17 +5,20 @@
     justify-content: center;
     margin-top: 30px;
 }
-.slider-content img{
-    width: 100vw;
-}
 
 /* pastillas */
 .pastilla-title{
     text-align: center;
-    font-weight: 300;
-    font-size: 2.1em;
     padding: 30px;
     margin-top: 40px;
+}
+.pastilla-title h2{
+    font-size: 6em;
+    font-weight: 600;
+}
+.pastilla-title h4{
+    font-size: 2em;
+    font-weight: 300;
 }
 .pastillas-content{
     display: flex;
@@ -37,7 +40,7 @@
 }
 .pastillas-link{
     text-decoration: none;
-    border: 3px solid rgb(2, 92, 2);
+    border: 3px solid rgb(2 50 109);
     padding: 10px 50px;
     font-size: 1em;
     font-weight: 600;
@@ -47,7 +50,7 @@
     transition: background 1s;
 }
 .pastillas-link:hover{
-    background: rgb(2, 92, 2);
+    background: rgb(2 50 109);
     color: white;
 }
 
@@ -56,9 +59,10 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background: rgba(255, 251, 25, 0.829);
+    background:rgb(117 124 246);
     padding: 30px;
     margin-top: 30px;
+    font-size: 1.5em;
 }
 .banner-left{
     font-size: 1.5em;
