--- a/css/detalle-enfermedades.css
+++ b/css/detalle-enfermedades.css
@@ -3,33 +3,33 @@ main {
     width: 80%;
     margin: auto;
 }
-/* nav-bar */
 
-.nav-bar ul{
+/* btn-voler */
+.btn-volver button {
     display: flex;
-    justify-content: center;
-    background: #1e416d;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1em;
+    padding: 10px;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    margin-top: 30px;
+    transition: background 1s, color 1s;
 }
-.nav-bar ul li{
-    list-style: none;
-    text-transform: uppercase;
-    margin: 0px 15px;
-    padding: 15px 0px;
-}
-.nav-bar ul li a{
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 1.2em;
+.btn-volver button:hover{
+    background-color: rgb(11 97 204);
+    border-radius: 5px;
     color: white;
 }
-.nav-bar ul li:hover{
-    font-weight: 700;
-    border-bottom: 6px solid white;
+.btn-volver i{
+    font-size: 2em;
+    margin-right: 20px;
 }
-.nav-bar ul li a:hover{
-    color: rgb(207, 204, 204);
+.btn-volver a{
+    text-decoration: none;
 }
-
 
 /* detalles-enfermedad */
 .detalles-title h1 {
@@ -79,10 +79,12 @@ main {
     display: flex;
     justify-content: space-between;
 }
-
-.form-right form #name,
-.form-right form .countryVisited,
-.form-right form #address {
+.form-label {
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.input-100,
+.input-50 {
     padding: 10px;
     margin-top: 15px;
     width: 100%;
@@ -91,26 +93,15 @@ main {
     border: none;
 }
 
-.form-right form #city,
-.form-right form #dni,
-.form-right form #telefono{
-    padding: 10px;
-    margin-top: 15px;
-    width: 100%;
-    border-radius: 5px;
-    background:#c2d5ecbd;
-    border: none;
-}
-
-.form-gender span{
+.form-gender span {
     display: block;
 }
-.form-right form [type="radio"]{
+.form-right form [type="radio"] {
     margin-left: 8px;
     margin-right: 4px;
 }
 
-.form-right form [type="submit"]{
+.boton-enviar {
     padding: 20px;
     margin: 10px;
     width: 100%;
@@ -123,50 +114,54 @@ main {
     cursor: pointer;
     transition: background 1s, color 1s;
 }
-.form-right form [type="submit"]:hover{
-    background:#ef0000f7;
+.boton-enviar:hover {
+    background: #ef0000f7;
     color: white;
+}
+.text-form {
+    margin: 30px 0px 10px 0;
+    font-weight: 500;
 }
 
 /* medidas de precaucion */
-.precauciones-primer-fila figure{
+.precauciones-primer-fila div {
     display: flex;
     justify-content: space-between;
 }
-.precauciones-primer-fila img{
+.precauciones-primer-fila img {
     width: 200px;
     padding-top: 30px;
     padding-bottom: 20px;
 }
 
 /* hospital */
-.hospital-map-info{
+.hospital-map-info {
     margin: 30px 0px;
     padding-bottom: 50px;
 }
-.hospital-datos-content h3{
+.hospital-datos-content h3 {
     padding: 30px 0px;
     font-size: 1.6em;
     text-decoration: underline;
 }
-.hospital-datos-content{
+.hospital-datos-content {
     padding: 30px;
     width: 40%;
     border: 3px solid #02326d;
     border-radius: 10px;
 }
 
-.hospital-datos li{
+.hospital-datos li {
     list-style: none;
     font-size: 1.7em;
     padding: 15px 0px;
 }
-.hospital-datos li i{
+.hospital-datos li i {
     margin-right: 20px;
     color: #04026d;
     font-size: 1.5em;
 }
-.hospital-map-content .hospital-map-info{
+.hospital-map-content .hospital-map-info {
     display: flex;
     justify-content: space-between;
 }
