--- a/css/style.css
+++ b/css/style.css
@@ -99,13 +99,13 @@ body{
 .footer-right h4{
     margin-bottom: 20px;
 }
-.footer-right figure a{
+.footer-right div a{
     text-decoration: none;
     font-size: 2em;
     margin-right: 10px;
     color: white;
     cursor: pointer;
 }
-.footer-right figure a:hover{
+.footer-right div a:hover{
     color: rgb(197, 181, 181);
 }
