--- a/css/contacto.css
+++ b/css/contacto.css
@@ -72,7 +72,6 @@ h2{
 }
 
 
-
 /*datos de la empresa*/
 
 .datos-hijo-contenido ul li{
@@ -106,4 +105,18 @@ h2{
 .ubicacion{
     margin-top: 10px;
     text-align: center;
+}
+
+/*mapa de google*/
+main figure iframe{
+    padding: 5px 0px;
+    border-radius: 20px;
+    opacity: 0.3;
+}
+
+main figure iframe:hover{
+    opacity: 1;
+    -webkit-box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
+-moz-box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
+box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
 }
