--- a/css/detalle-enfermedades.css
+++ b/css/detalle-enfermedades.css
@@ -165,3 +165,16 @@ main {
     display: flex;
     justify-content: space-between;
 }
+
+main figure iframe{
+    padding: 5px 0px;
+    border-radius: 20px;
+    opacity: 0.3;
+}
+
+main figure iframe:hover{
+    opacity: 1;
+    -webkit-box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
+-moz-box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
+box-shadow: 0px 66px 100px -20px rgba(0,0,0,0.56);
+}
