--- a/css/listado-enfermedades.css
+++ b/css/listado-enfermedades.css
@@ -1,10 +1,10 @@
 main{
-    width: 50%;
+    width: 80%;
     margin: auto;
 }
 .parrafo{
     display: flex;
-    margin: 20px 0px 20px 0px;
+    margin: 50px 0px 20px 0px;
     
 }
 .imgcontenedor{
@@ -23,7 +23,7 @@ h3{
 }
 h2{
     text-align: center;
-    margin: 20px 0 10px 0px;
+    margin: 40px 0 30px 0px;
 }
 main a{
     text-decoration: none;
@@ -52,6 +52,7 @@ main a:hover{
     width: 100%;
     opacity: .7;
     color: black;
+    padding: 10px;
    
 }
 .main-filtro button{
@@ -61,5 +62,6 @@ main a:hover{
     border: none;
     border-radius: 10%;
     color: white;
+    margin-right: 20px;
 }
 
