--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,36 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1em;
 }
 
 /* header */
-.header-content{
+.header-content {
     background: rgb(11 97 204);
     padding: 20px;
 }
 
-.header-content section{
+.header-content section {
     display: flex;
     justify-content: center;
 }
-.header-content section img{
+.header-content section img {
     margin-right: 8%;
     width: 4%;
 }
-.header-content section input{
+.header-content section input {
     margin-right: 1%;
     width: 70%;
     border: none;
-    opacity: .7;
+    opacity: 0.7;
     color: black;
     padding: 10px;
 }
-.header-content section button{
+.header-content section button {
     font-size: 1.3em;
     padding: 1%;
     background: rgb(30 65 109);
@@ -40,13 +40,13 @@ body{
 }
 
 /* nav-bar */
-.nav-bar ul{
+.nav-bar ul {
     display: flex;
     justify-content: center;
     background: #1e416d;
     flex-wrap: wrap;
 }
-.nav-bar ul li{
+.nav-bar ul li {
     list-style: none;
     text-transform: uppercase;
     width: 12%;
@@ -54,24 +54,60 @@ body{
     box-sizing: border-box;
     text-align: center;
 }
-.nav-bar ul li a{
+.nav-bar ul li a {
     text-decoration: none;
     font-weight: 600;
     font-size: 1.2em;
     color: white;
-    
 }
-.nav-bar ul li:hover{
+.nav-bar ul li:hover {
     font-weight: 700;
     border-bottom: 6px solid white;
 }
-.nav-bar ul li a:hover{
+.nav-bar ul li a:hover {
     color: rgb(207, 204, 204);
+}
+
+/* btn-arriba */
+.arriba {
+    display: block;
+    width: 60px;
+    height: 60px;
+    background-color: rgb(11 97 204);
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 50%;
+    background-image: url(../img/flecha.png);
+    background-size: cover;
+    border: none;
+    opacity: 0.7;
+}
+.arriba:hover {
+    background-color: rgb(11 97 204);
+    background-image: url(../img/flecha.png);
+    background-size: cover;
+    opacity: 1;
+    border: none;
+}
+
+/*mapa de google*/
+main figure iframe {
+    padding: 5px 0px;
+    border-radius: 20px;
+    opacity: 0.3;
+}
+
+main figure iframe:hover {
+    opacity: 1;
+    -webkit-box-shadow: 0px 66px 100px -20px rgba(0, 0, 0, 0.56);
+    -moz-box-shadow: 0px 66px 100px -20px rgba(0, 0, 0, 0.56);
+    box-shadow: 0px 66px 100px -20px rgba(0, 0, 0, 0.56);
 }
 
 
 /* footer */
-.footer-content{
+.footer-content {
     background: rgb(2 50 109);
     color: white;
     display: flex;
@@ -80,49 +116,34 @@ body{
     margin-top: 50px;
 }
 
-.footer-left h4{
+.footer-left h4 {
     margin-bottom: 20px;
 }
-.footer-center h4{
+.footer-center h4 {
     margin-bottom: 20px;
 }
-.footer-content ul{
+.footer-content ul {
     list-style: none;
 }
-.footer-content ul li a{
+.footer-content ul li a {
     text-decoration: none;
     color: white;
 }
-.footer-content ul li a:hover{
+.footer-content ul li a:hover {
     font-size: 1.1em;
     font-weight: 500;
 }
-.footer-right h4{
+.footer-right h4 {
     margin-bottom: 20px;
 }
-.footer-right div a{
+.footer-right div a {
     text-decoration: none;
     font-size: 2em;
     margin-right: 10px;
     color: white;
     cursor: pointer;
 }
-.footer-right div a:hover{
+.footer-right div a:hover {
     color: rgb(197, 181, 181);
 }
-.arriba{
-    display: block;
-    width: 60px;
-    height: 60px;
-    background-color: #7aa6eb;
-    position: fixed;
-    right: 0;
-    bottom: 10px;
-    border-radius: 50%;
-    background-image: url(../img/flecha.png);
-    background-size: cover;
-   
-}
-.arriba:hover{
-    opacity: 0.8;
-}
+
