--- a/css/vacunas.css
+++ b/css/vacunas.css
@@ -1,44 +1,56 @@
-main{
-    width: 60%;
+main {
+    width: 80%;
     margin: auto;
 }
-#h2centro-de-vacunacion{
+h2 {
     text-align: center;
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    text-transform: uppercase;
 }
-#h2hospitales{
-    text-align: center;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    border-top: 2px solid #000;
+hr {
+    border: 1px solid black;
+    margin: 60px 0;
 }
-.vacunas-general{
+
+/* centro de vacunacion */
+.vacunas-general {
     display: flex;
     margin-bottom: 20px;
 }
-#img-vacunas{
+#img-vacunas {
     width: 300px;
     margin-right: 30px;
     border-radius: 10px;
 }
-ul{
-    margin-left: 25px;
-}
-.article-mapas{
-    padding: 25px;;
+.vacunacion-info li{
+    list-style: none;
 }
 
-.mapas{
-    display:flex;
-    align-content: center;
-    justify-content: center;
-    margin-bottom: 25px;      
+/* mapas */
+.maps-content {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
 }
-#map{
-    width:550px; 
-    height:340px; 
-   
+.maps-text{
+    margin-bottom: 20px;
+    margin-top: 60px;
+    text-align: center;
+}
+
+.maps-right {
+    width: 30%;
+    box-sizing: border-box;
+}
+
+figure iframe{
+    transition: width 0.3s, height 0.3s;
+    margin-bottom: 50px;
+}
+
+figure iframe:hover{
+    width: 550px;
+    height: 450px;
 }
