--- a/css/contacto.css
+++ b/css/contacto.css
@@ -4,29 +4,18 @@ main {
     margin: auto;
 }
 
-h2{
-    text-transform: uppercase;
+h3{
     margin: 30px 0px;
     padding: 10px 0;
-    font-size: 1.6em;
     font-weight: 600;
 }
 
 
-/*contenido*/
-
-.contenido{
-    
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 15px 0px;
-}
-
-
 /*formulario de contacto*/
-
-.formulario-hijo-contenido div{
+.two-col{
+    width: calc(50% - 12em);   
+}
+.two-col div{
     margin-bottom: 7px;
 }
 
@@ -39,18 +28,13 @@ h2{
     border: none;
 }
 
-.formulario-hijo-contenido button{
+.two-col button{
     margin-top: 7px;
     background-color: lightgray;
     border-radius: 5px;
     padding: 5px;
     font-weight: 300;
     text-align: right;
-}
-
-.formulario-hijo-contenido button:hover{
-    background-color:skyblue;
-    font-weight: bold;
 }
 
 .boton-enviar{
@@ -73,31 +57,29 @@ h2{
 
 
 /*datos de la empresa*/
-
-.datos-hijo-contenido ul li{
+.two-col ul li{
     list-style: none;
+    margin-bottom: 10px;
+    padding: 5px 0;
+    font-size: 1.2em;
 }
-
-.datos-hijo-contenido a{
+.two-col a{
     text-decoration: none;
     color:skyblue;
     font-size: 2.2em;
     margin: 20px 30px 0px 0px;
 }
-
-.datos-hijo-contenido a:hover{
+.two-col a:hover{
    color:black;
 }
-
-.datos-hijo-contenido ul li{
-    margin-bottom: 10px;
-    padding: 5px 0;
-    font-size: 1.2em;
-}
-
 .telefonos{
-    text-align: left;
     font-style: oblique;
+}
+.web-list{
+    margin-top: 40px;
+}
+.web-list p{
+    margin-bottom: 5px;
 }
 
 
@@ -105,4 +87,5 @@ h2{
 .ubicacion{
     margin-top: 10px;
     text-align: center;
+    margin-bottom: 100px;
 }
