--- a/css/listado-enfermedades.css
+++ b/css/listado-enfermedades.css
@@ -2,66 +2,78 @@ main{
     width: 80%;
     margin: auto;
 }
-.parrafo{
-    display: flex;
-    margin: 50px 0px 20px 0px;
-    
-}
-.imgcontenedor{
-    margin-right: 20px;
-    display: flex;
-}
-.img-enfermedad{
-    width: 320px;
-    display: flex;
-    border-radius: 20px;
-}
-
 h3{
-    display: inline-block;
-    margin-bottom: 8px;
+    margin-bottom: 15px;
 }
 h2{
     text-align: center;
-    margin: 40px 0 30px 0px;
+    margin: 40px 0;
 }
-main a{
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid #000;
-    padding: 6px;
-    display: inline-block;
-    margin-top: 10px;
-    border-radius: 8px;
-    background: rgb(11 97 204);
-}
-main a:hover{
-    color: rgb(11 97 204);
-    background: #fff;
-    border: 1px solid #fff;
-}
+/* datalist - listado */
 .main-filtro{
     display: flex;
+    flex-wrap: wrap;
     justify-content:center;
-   
+    align-items: center;
 }
-.main-filtro img{
-    width: 5%;
+.main-filtro article{
+    width: calc(100% - 10px);
+    box-sizing: border-box;
 }
-.main-filtro input{
-    width: 100%;
+.main-filtro article input{
+    width: 90%;
     opacity: .7;
-    color: black;
-    padding: 10px;
-   
-}
-.main-filtro button{
-    font-size: 1.3em;
-    padding: 1%;
-    background: rgb(30 65 109);
+    padding: 16px 10px;
+    border-radius: 10px;
+    background-color: #0000001c;
     border: none;
-    border-radius: 10%;
-    color: white;
+}
+.main-filtro article button{
+    font-size: 1.2em;
+    padding: 14px;
+    background: rgb(11 97 204);
+    border: none;
+    border-radius: 10px;
+    color: #ffffff;
     margin-right: 20px;
+    cursor: pointer;
+}
+
+/* listado-enfermedades */
+.img-text-content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 50px 0px 20px 0px;
+}
+.img-text-content article{
+    width: calc(50% - 0.2em);
+    box-sizing: border-box;
+}
+.img-text-content img{
+    margin-bottom: 70px;
+}
+.img-text-content article p{
+    margin-bottom: 40px;
+}
+.btn-info{
+    padding: 15px 10px;
+    text-decoration: none;
+    color: black;
+    transition: background 1s;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+    width: 20%;
+}
+.btn-info i{
+    font-size: 2em;
+    margin-right: 10px;
+}
+.btn-info:hover{
+    background-color: rgb(11 97 204);
+    border-radius: 10px;
+    color: white;
 }
 
