--- a/css/mapa.css
+++ b/css/mapa.css
@@ -11,13 +11,12 @@ main {
 
 /*mapa*/
 main section {
-    text-align: center;
-    margin-top: 3%;
+    margin: 30px 0 100px 0;
 }
 
 section h2 {
-    padding: 5px 0px;
-    text-transform: uppercase;
-    margin-bottom: 1.5%;
+    padding-top: 10px;
+    margin-bottom: 50px;
+    text-align: center;
 }
 
