--- a/css/vacunas.css
+++ b/css/vacunas.css
@@ -7,7 +7,6 @@ h2 {
     padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    text-transform: uppercase;
 }
 hr {
     border: 1px solid black;
@@ -15,42 +14,33 @@ hr {
 }
 
 /* centro de vacunacion */
-.vacunas-general {
-    display: flex;
-    margin-bottom: 20px;
-}
-#img-vacunas {
-    width: 300px;
-    margin-right: 30px;
+.two-col img{
     border-radius: 10px;
+    width: 100%;
 }
 .vacunacion-info li{
     list-style: none;
 }
 
 /* mapas */
-.maps-content {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
+.centro-title{
+    text-align: center;
 }
 .maps-text{
     margin-bottom: 20px;
     margin-top: 60px;
     text-align: center;
+    font-weight: 600;
 }
 
-.maps-right {
-    width: 30%;
-    box-sizing: border-box;
-}
-
-figure iframe{
+.map-two-col{
     transition: width 0.3s, height 0.3s;
     margin-bottom: 50px;
+    width: 100%;
+    height: 450px;
 }
 
 figure iframe:hover{
-    width: 550px;
-    height: 450px;
+    width: 700px;
+    height:700px;
 }
