--- a/css/detalle-enfermedades.css
+++ b/css/detalle-enfermedades.css
@@ -1,9 +1,3 @@
-/* detalles-enfermedad */
-main {
-    width: 80%;
-    margin: auto;
-}
-
 /* btn-voler */
 .btn-volver button {
     display: flex;
@@ -137,6 +131,10 @@ main {
 }
 
 /* hospital */
+.two-col{
+    width: calc(50% - 1em);
+}
+
 .two-col h4 {
     padding: 30px 0px;
     font-weight: 500;
