--- a/css/style.css
+++ b/css/style.css
@@ -8,31 +8,40 @@ body {
     font-size: 1em;
 }
 
-h1{
+h1 {
     font-size: 3em;
     font-weight: 600;
     text-transform: uppercase;
 }
-h2{
+h2 {
     font-size: 2.6em;
     text-transform: uppercase;
 }
-h3{
+h3 {
     font-size: 2.3em;
     text-transform: uppercase;
 }
-h4{
+h4 {
     font-size: 2em;
     font-weight: 300;
     text-transform: uppercase;
 }
-h5{
+h5 {
     font-weight: 600;
     text-transform: uppercase;
     font-size: 1.2em;
 }
-p{
+p {
     font-size: 1em;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+}
+.container-fluid {
+    width: 100%;
+    margin: auto;
 }
 
 /* header */
@@ -142,11 +151,10 @@ main figure iframe:hover {
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
-.two-col{
+.two-col {
     width: calc(50% - 6em);
     box-sizing: border-box;
 }
-
 
 /* footer */
 .footer-content {
@@ -186,4 +194,3 @@ main figure iframe:hover {
 .footer-right div a:hover {
     color: rgb(197, 181, 181);
 }
-
