--- a/css/contacto.css
+++ b/css/contacto.css
@@ -18,9 +18,11 @@ h3{
     margin: 10px 0px;
     width: 100%;
     border-radius: 5px;
-    background: #c2d5ecbd;
+    background-color: #c2d5ecbd;
     border: none;
 }
+
+
 
 .two-col button{
     margin-top: 7px;
@@ -82,4 +84,15 @@ h3{
     margin-top: 10px;
     text-align: center;
     margin-bottom: 100px;
+}
+
+
+/* Mensaje de envio */
+.mensajeEnvio p{
+    display: none;
+}
+
+.mensajeEnvio i{
+    color: black;
+    font-size: 1.6em;
 }
