--- a/css/contacto.css
+++ b/css/contacto.css
@@ -30,10 +30,13 @@ h3{
     font-weight: 300;
     text-align: right;
 }
-
 .boton-enviar{
+    padding: 16px;
+    width: 100%;
+}
+
+.boton-enviar input{
     padding: 20px;
-    margin: 10px;
     width: 100%;
     border-radius: 5px;
     border: 4px solid #34ef00f7;
@@ -43,7 +46,7 @@ h3{
     cursor: pointer;
     transition: background 1s, color 1s;
 }
-.boton-enviar:hover{
+.boton-enviar input:hover{
     background-color:#34ef00f7;
     color: black;
 }
