--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ p {
 
 /* header */
 .header-content {
-    background-color: rgb(11 97 204);
+    background: rgb(11 97 204);
     padding: 20px;
 }
 
@@ -70,7 +70,7 @@ p {
 .header-content div button {
     font-size: 1.3em;
     padding: 1%;
-    background-color: rgb(30 65 109);
+    background: rgb(30 65 109);
     border: none;
     border-radius: 10px;
     color: white;
@@ -81,7 +81,7 @@ p {
 .nav-bar ul {
     display: flex;
     justify-content: center;
-    background-color: #1e416d;
+    background: #1e416d;
     flex-wrap: wrap;
 }
 .nav-bar ul li {
@@ -158,7 +158,7 @@ main figure iframe:hover {
 
 /* footer */
 .footer-content {
-    background-color: rgb(2 50 109);
+    background: rgb(2 50 109);
     color: white;
     display: flex;
     justify-content: space-evenly;
@@ -195,7 +195,40 @@ main figure iframe:hover {
     color: rgb(197, 181, 181);
 }
 
-.ocultar {
-    display: none;
+
+/* mensaje error / success js */
+.errorMessage{
+    color: red;
+    display: block;
+    margin-bottom: 11px;
+    font-weight: 600;
 }
 
+.errorInput{
+    padding: 15px;
+    margin: 10px 0px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: white;
+    border: 2px solid red ;
+}
+
+.mensajeEnvio{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background-color: #5dff5a;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+.mensajeEnvio p{
+    align-items: center;
+    font-size: 1.5em;
+    padding: 15px;
+    font-weight: 500;
+    box-sizing: border-box;
+}
+
+.ocultar{
+    display: none;
+}
