--- a/css/contacto.css
+++ b/css/contacto.css
@@ -17,7 +17,7 @@ h3{
     padding: 15px;
     margin: 10px 0px;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 25px;
     background-color: #c2d5ecbd;
     border: none;
 }
@@ -32,13 +32,16 @@ h3{
     font-weight: 300;
     text-align: right;
 }
-
 .boton-enviar{
-    padding: 20px;
-    margin: 10px;
+    padding: 15px;
     width: 100%;
-    border-radius: 5px;
-    border: 3px solid #ef0000f7;
+}
+
+.boton-enviar input{
+    padding: 20px;
+    width: 100%;
+    border-radius: 20px;
+    border: 3px solid #40d12ef7;
     background: none;
     color: black;
     font-weight: 500;
@@ -46,8 +49,8 @@ h3{
     cursor: pointer;
     transition: background 1s, color 1s;
 }
-.boton-enviar:hover{
-    background:#ef0000f7;
+.boton-enviar input:hover{
+    background:#40d12ef7;
     color: white;
 }
 
@@ -88,11 +91,21 @@ h3{
 
 
 /* Mensaje de envio */
-.mensajeEnvio p{
-    display: none;
+.mensaje-envio{
+    padding: 15px;
+    width: 100%;
+}
+.mensaje-envio p{
+    background-color: #bcff79;
+    border: 4px solid chartreuse;
+    padding: 30px;
+    border-radius: 25px;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 500;
 }
 
-.mensajeEnvio i{
+.mensaje-envio i{
     color: black;
     font-size: 1.6em;
 }
