--- a/css/calendario.css
+++ b/css/calendario.css
@@ -1,8 +1,3 @@
-main{
-    width: 80%;
-    margin: auto;
-}
-
 .titulo-principal{
     text-align: center;
     margin: 2em 0;
@@ -34,3 +29,39 @@ div .fc-head{
 
 /*FIN DE AJUSTE VISUALES DEL CALENDARIO DE VACUNAS*/
 
+
+/* btn-voler */
+.btn-volver button {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    font-size: 1em;
+    padding: 10px;
+    background-color: white;
+    border: none;
+    cursor: pointer;
+    margin: 10% 0;
+    transition: background 1s, color 1s;
+}
+.btn-volver button:hover {
+    background-color: rgb(11 97 204);
+    border-radius: 5px;
+    color: white;
+}
+.btn-volver i {
+    font-size: 2em;
+    margin-right: 20px;
+}
+.btn-volver a {
+    text-decoration: none;
+}
+
+/* TABLET */
+@media screen and (min-width: 768px) {
+    .btn-volver button{
+        margin: 3% 0;
+    }
+}
+
+/* ----------- FIN TABLET ----------------- */
